--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed:groups": "node scripts/seed-groups.js",
-    "create:test-group": "node scripts/create-test-group.js"
+    "seed:groups": "node scripts/seed-groups-admin.js",
+    "create:test-group": "node scripts/create-test-group.js",
+    "add:bach": "node scripts/add-bach-group.js",
+    "check:groups": "node scripts/check-groups.js",
+    "make:admin": "node scripts/make-admin.js"
   },
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
@@ -16,7 +19,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "lucide-react": "^0.561.0",
+    "lucide-react": "latest",
     "next": "15.0.0",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc-65a56d0e-20241020",
