--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "lucide-react": "0.560.0",
+    "lucide-react": "^0.263.1",
     "next": "15.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
