--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npm run build",
-  "installCommand": "npm install"
+  "installCommand": "npm ci --legacy-peer-deps",
+  "buildCommand": "npm run build"
 }
