--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "add:bach": "node scripts/add-bach-group.js",
     "check:groups": "node scripts/check-groups.js",
     "make:admin": "node scripts/make-admin.js",
+    "gen-types": "supabase gen types typescript --project-id jjdcbvcniizklulbjkaa --schema public > src/types/database.types.ts",
     "postinstall": ""
   },
   "dependencies": {
@@ -34,7 +35,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -49,6 +51,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "supabase": "^2.67.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
